--- a/CV.html
+++ b/CV.html
@@ -2,6 +2,7 @@
 <html lang="fa" dir="rtl">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="Fx4fLJqEa7dKp1WZcBmNnOpQrStUvXyZaBcDeFgHiJk" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- ✅ عنوان بهینه‌شده برای سئو -->
@@ -986,3 +987,4 @@
     </script>
 </body>
 </html>
+
