--- a/CV.html
+++ b/CV.html
@@ -908,7 +908,7 @@
         </div>
         
         <div class="footer">
-            © 2025 ساخته شده توسط پیامبران 
+            © 2025 ساخت شده توسط امیرحسین پوستجی 
         </div>
     </div>
 
@@ -987,6 +987,7 @@
     </script>
 </body>
 </html>
+
 
 
 
