--- a/CV.html
+++ b/CV.html
@@ -908,7 +908,8 @@
         </div>
         
         <div class="footer">
-              © 2025 ساخت شده توسط امیرحسین پوستچی  
+        ساخت شده توسط امیرحسین پوستچی 
+                © 2025
         </div>
     </div>
 
@@ -987,6 +988,7 @@
     </script>
 </body>
 </html>
+
 
 
 
