--- a/CV.html
+++ b/CV.html
@@ -908,8 +908,8 @@
         </div>
         
         <div class="footer">
-        ساخت شده توسط امیرحسین پوستچی 
-                © 2025
+         © 2025 ساخت شده توسط امیرحسین پوستچی  
+               
         </div>
     </div>
 
@@ -988,6 +988,7 @@
     </script>
 </body>
 </html>
+
 
 
 
